--- a/src/app/modules/main/content/components/releases/releases.component.html
+++ b/src/app/modules/main/content/components/releases/releases.component.html
@@ -20,15 +20,17 @@
                 <div class="w-full flex justify-between items-center p-3 border-b border-gray-100 hover:bg-gray-50 hover:border-gray-200 hover:rounded-md" *ngFor="let release of releaseItems">
                     <div class="">
                         <div class="text-base text-gray-700">{{release.releaseTitle}}</div>
-                        <div class="text-gray-600 text-xs py-2">Tag: <span class="text-gray-400 italic">{{release.releaseTag ? release.releaseTag : '- NA -'}}</span></div>
-                        <div class="text-gray-600 text-xs">Client: <span class="text-blue-600 cursor-pointer hover:underline">{{filterRequiredIds('client', release.clientId)}}</span></div>
+                        <div class="text-gray-600 text-xs flex mt-1">
+                            <span class="text-xs border border-gray-200 text-gray-600 bg-gray-50 py-0.5 px-2 cursor-pointer rounded-md hover:border-blue-400" [routerLink]="['../clients', release.clientId]">Client : {{filterRequiredIds('client', release.clientId)}}</span>
+                            <span class="text-xs border border-gray-200 text-gray-600 bg-gray-50 py-0.5 px-2 ml-2 cursor-pointer rounded-md hover:border-blue-400" [routerLink]="['../projects', release.projectId]">Project : {{filterRequiredIds('project', release.projectId)}}</span>
+                        </div>
                     </div>
                     <div class="flex content-center">
                         <div class="">
                             <div class="text-right">
                                 <span class="text-right text-xs px-3 rounded-full uppercase" [ngClass]="getStatusStyle(filterRequiredIds('status', release.releaseStatusId))">{{filterRequiredIds('status', release.releaseStatusId)}}</span>
                             </div>
-                            <div class="mt-2 text-gray-400 text-xs flex items-center"><mat-icon class="text-sm mt-1">date_range</mat-icon>Closing On: <span class="text-gray-500 ml-1">{{release.releaseClosingDate | date}}</span></div>
+                            <div class="mt-2 text-gray-400 text-xs flex items-center">Closing On: <span class="text-gray-500 ml-1">{{release.releaseClosingDate | date}}</span></div>
                         </div>
                         <div class="ml-4">
                             <button mat-icon-button class="text-gray-600"  [routerLink]="['./', release._id]">
